# gdsims

./: .buildinfo  .gitignore  Aestivation.cpp  Aestivation.h  BoundaryStrategy.cpp  CMakeLists.txt  ConnecStrategy.cpp  ConnecStrategy.h  CoordinateList1run1.txt  Dispersal.cpp  Dispersal.h  Exception.cpp  Exception.h  GDRelease.cpp  General.cpp  GeneralMetapop.cpp  GeneralMetapop.h  LICENSE  LocalData152run1.txt  LocalData1run1.txt  Model.cpp  Model.h  Par1.csv  Par152.csv  ParB1.csv  ParList152run1.txt  ParList1run1.txt  Params.h  Pars.nb  Patch.cpp  Patch.h  README.md  Record.cpp  Record.h  Seasonality.cpp  Seasonality.h  Simulation.cpp  Simulation.h  Totals152run1.txt  Totals1run1.txt  (+20 more)
.doctrees/: api.doctree  environment.pickle  index.doctree  install.doctree  tutorials.doctree  usage.doctree
Python data plotting/: GeneralMetapopPlots.py  GeneralMetapopTest.py
Testing/: GeneralMetapopPlots.py  GeneralMetapopTest.py
_sources/: index.rst  install.rst  tutorials.rst  usage.rst
api/: classAestivation.html  classBoundaryStrategy.html  classDispersal.html  classDistanceKernelDispersal.html  classEdgeBoundaryStrategy.html  classGDRelease.html  classInputRainfall.html  classModel.html  classPatch.html  classRadialDispersal.html  classRandomGDRelease.html  classRecord.html  classSchedGDRelease.html  classSeasonality.html  classSimulation.html  classSineRainfall.html  classToroidalBoundaryStrategy.html  class_aestivation.html  class_boundary_strategy.html  class_dispersal.html  class_distance_kernel_dispersal.html  class_edge_boundary_strategy.html  class_g_d_release.html  class_input_rainfall.html  class_model.html  class_patch.html  class_radial_dispersal.html  class_random_g_d_release.html  class_record.html  class_sched_g_d_release.html  class_seasonality.html  class_simulation.html  class_sine_rainfall.html  class_toroidal_boundary_strategy.html  dir__github_workspace_includes.html  dir__github_workspace_src.html  dir_includes.html  dir_src.html  enum_constants_8h_1ac025f1e887ae43bed8cad7aff794c04a.html  enum_constants_8h_1af75d5dd7322fa39ed0af4e7839e600f8.html  (+192 more)
docs/: api.rst  conf.py  index.rst  install.rst  requirements.txt  usage.rst
gui/: gui_root.html  install.html  tutorials.html  usage.html
html/: _aestivation_8cpp.html  _aestivation_8cpp__incl.map  _aestivation_8cpp__incl.md5  _aestivation_8h.html  _aestivation_8h__dep__incl.map  _aestivation_8h__dep__incl.md5  _aestivation_8h__incl.map  _aestivation_8h__incl.md5  _aestivation_8h_source.html  _boundary_strategy_8cpp.html  _boundary_strategy_8cpp__incl.map  _boundary_strategy_8cpp__incl.md5  _boundary_strategy_8h.html  _boundary_strategy_8h__dep__incl.map  _boundary_strategy_8h__dep__incl.md5  _boundary_strategy_8h__incl.map  _boundary_strategy_8h__incl.md5  _boundary_strategy_8h_source.html  _dispersal_8cpp.html  _model_8h.html  (+431 more)
(+3656 files in other folders)
